--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "pg": "^8.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "sweetalert2": "^11.3.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
